--- a/cw06/zad2/Makefile
+++ b/cw06/zad2/Makefile
@@ -1,5 +1,5 @@
 all:
-	gcc -Wall -std=gnu11 -o server server.c -lm
-	gcc -Wall -std=gnu11 -o client client.c -lm
+	gcc -Wall -std=gnu11 -o server server.c -lrt
+	gcc -Wall -std=gnu11 -o client client.c -lrt
 	
 .PHONY: all
