Finished cw07/zad1

--- a/cw07/zad1/Makefile
+++ b/cw07/zad1/Makefile
@@ -1,5 +1,5 @@
 all: 
-	gcc -Wall -std=gnu11 -o barber barber.c -lrt
-	gcc -Wall -std=gnu11 -o client client.c -lrt
+	gcc -Wall -std=gnu11 -o barber barber.c queue.c -lrt
+	gcc -Wall -std=gnu11 -o client client.c queue.c -lrt
 
 .PHONY: all
