--- a/cw10/zad2/Makefile
+++ b/cw10/zad2/Makefile
@@ -1,5 +1,5 @@
 all:
-	gcc -Wall -o server server.c -lpthread -lrt
-	gcc -Wall -o client client.c -lpthread -lrt
+	gcc -Wall -std=gnu11 -o server server.c -lpthread -lrt
+	gcc -Wall -std=gnu11 -o client client.c -lpthread -lrt
 
 .PHONY: all
